--- a/arch/arm/boot/dts/zynq-zybo.dts
+++ b/arch/arm/boot/dts/zynq-zybo.dts
@@ -39,7 +39,8 @@
 		spi0 = &ps7_qspi_0;
 	} ;
 	chosen {
-		bootargs = "console=ttyPS0,115200 root=/dev/ram rw earlyprintk";
+		/*bootargs = "console=ttyPS0,115200 root=/dev/ram rw earlyprintk";*/
+                bootargs = "console=ttyPS0,115200 root=/dev/mmcblk0p2 rw earlyprintk rootfstype=ext4 rootwait";
 		linux,stdout-path = "/amba@0/serial@e0001000";
 	} ;
 	cpus {
